--- a/server/TODO
+++ b/server/TODO
@@ -1,4 +1,2 @@
-1. post review에 userID등록. (jwt를 이용해서 userID를 가져올 수 있을 때 controller에서 등록)
-2. getReviewList에 orderBy 및 조건 삽입. (bookmark, visit, like등의 쿼리를 만든 후 삽입,
-    조건은 community 등이 정립되면 삽입)
-3. getCommunityModel 작성. (frontend쪽 커뮤니티 보기 정해지면 작성)
+1. UserApplyInfo 안에 있는 것들 승인할 때 승인하는 유저 안사라지는 문제.
+user를 check로 바꾸는 방법이랑 props로 setUser를 물려주는 방법이 생각난다.
